src/test/ui/borrowck/borrowck-uninit-after-item.stderr
error[E0381]: use of possibly uninitialized variable: `bar`
  --> $DIR/borrowck-uninit-after-item.rs:4:9
   |
LL |     baz(bar);
   |         ^^^ use of possibly uninitialized `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
